# structured_output_benchmark

./: .env copy  .env.example  .gitignore  README.md  __init__.py  cli.py  main.py  plan.md  prompt.yaml  pyproject.toml  utils.py  workflow_cli.py
api_server/: __init__.py  config.py  main.py
api_server/models/: common.py  evaluation.py  extraction.py
api_server/routers/: __init__.py  evaluation.py  extraction.py  utils.py  visualization.py
api_server/services/: __init__.py  evaluation_service.py  extraction_service.py  file_service.py  visualization_service.py
core/: __init__.py  evaluation.py  extraction.py  logging.py  tracing.py  types.py  visualization.py
data/: 11안세기_이력서.json  국문이력서(그림포함)-s1.json  리멤버-S2.json  리멤버-S3.json  리멤버-s1.json  링크드인 국문-s1.json
evaluation/: __init__.py  core.py  metrics.py  utils.py  visualizer.py
evaluation_module/: __init__.py  metric.py  visualizer.py
extraction/: __init__.py  base.py  compatibility.yaml  core.py  factory.py  utils.py
extraction/frameworks/: __init__.py  anthropic_framework.py  google_framework.py  instructor_framework.py  langchain_parser_framework.py  langchain_tool_framework.py  llamaindex_framework.py  lm_format_enforcer_framework.py  marvin_framework.py  mirascope_framework.py  ollama_framework.py  openai_framework.py
extraction/schema/: schema_han.py
extraction_module/: __init__.py  base.py  framework_compatibility.yaml  utils.py
extraction_module/frameworks/: __init__.py  anthropic_framework.py  google_framework.py  instructor_framework.py  langchain_parser_framework.py  langchain_tool_framework.py  llamaindex_framework.py  lm_format_enforcer_framework.py  marvin_framework.py  mirascope_framework.py  ollama_framework.py  openai_framework.py
extraction_module/schema/: __init__.py  schema_han.py
parsing/: __init__.py  base.py  core.py  factory.py  preprocessor.py  utils.py
server/: config.py  main.py
utils/: __init__.py  cli_helpers.py  common.py  logging.py  types.py  visualization.py
workflow/: __init__.py  cli.py  config.py  core.py  test_workflow.yaml  utils.py
(+17 files in other folders)
